prueba con video

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  
+
 
 </head>
 
@@ -59,16 +59,31 @@
     <button onclick="mostrarSeccion('ley_senos')">8. Ley de Senos</button>
     <button onclick="mostrarSeccion('ley_cosenos')">9. Ley de Cosenos</button>
     <button onclick="mostrarSeccion('introduccion')">Video resolución de polinomios</button>
-    <button onclick="mostrarSeccion('Bbibliografias')">10. Bibliografias</button>
   </div>
 
   <div id="introduccion" class="content-section">
-    <h2>Introducción</h2>
-    <p>Este diario tiene como objetivo explorar diversos conceptos matemáticos, proporcionando ejemplos y explicaciones
-      que faciliten el aprendizaje y la comprensión de las matemáticas. Incluye definiciones, ejemplos y videos de
-      apoyo.</p>
-    <button onclick="mostrarSeccion('menu')">Volver al Menú</button>
+      <h2>Introducción</h2>
+      <p>
+          Este diario tiene como objetivo explorar diversos conceptos matemáticos, proporcionando ejemplos y explicaciones
+          que faciliten el aprendizaje y la comprensión de las matemáticas. Incluye definiciones, ejemplos y videos de
+          apoyo.<br>
+        Bibliografias dando credito a los videos usados en este diario:
+        <p>Canales usados en este diario:</p>
+        <ul>
+            <li>Agradecimientos a <a href="https://www.youtube.com/@danielcarreon" target="_blank">Daniel Carreón</a></li>
+            <li>Agradecimientos a <a href="https://www.youtube.com/@MatematicasprofeAlex" target="_blank">Matemáticas Profe Alex</a></li>
+            <li>Agradecimientos a <a href="https://www.youtube.com/@alromatematicas1720" target="_blank">Alro Matemáticas</a></li>
+            <li>Agradecimientos a <a href="https://www.youtube.com/@Autodidactass" target="_blank">Autodidactas</a></li>
+        </ul>
+      </p>
+      <h2>1. Link del video sobre polinomios</h2>
+      <a href="https://drive.google.com/file/d/15El3LEoScdbgCN9dP81CN8xvIBLh1gZZ/view?usp=sharing" target="_blank">Ver Video</a>
+
+      <br><br> <!-- Agrega espacio adicional si es necesario -->
+
+      <button onclick="mostrarSeccion('menu')">Volver al Menú</button>
   </div>
+
 
   <!-- Productos Notables -->
   <div id="productos_notables" class="content-section">
@@ -86,7 +101,7 @@
     <p><b>Los productos notables son expresiones algebraicas que vienen de un producto que conocemos porque sigue reglas
         fijas y cuyo resultado puede ser escrito por simple inspección, es decir, sin verificar la multiplicación. Estas
         operaciones son fáciles de recordar sin necesidad de efectuar la multiplicación correspondiente.</p>
-    
+
 </body>
 </p>
 <!-- Video -->
@@ -106,7 +121,7 @@
   </ul>
 
   <p class="creditos">Créditos: [Prof. Alex. Autor de video]</p>
-  
+
 </div>
 <button onclick="mostrarSubtema('cuadrado_suma')">Ejemplo: Cuadrado de una Suma</button>
 <button onclick="mostrarSubtema('producto_suma_diferencia')">Ejemplo: Producto de una Suma por una
@@ -574,7 +589,7 @@
   <h2>4. Resolución de Ecuaciones Cuadráticas</h2>
   <p><strong>Fundamento teórico:</strong></p>
   <p>Las ecuaciones cuadráticas tienen la forma ax² + bx + c = 0 y pueden resolverse mediante varios métodos:</p>
-  
+
   <button onclick="mostrarSubtema('completacion_cuadrados')">4.a Completación de Cuadrados</button>
   <button onclick="mostrarSubtema('formula_cuadratica')">4.b Fórmula Cuadrática</button>
   <button onclick="mostrarSeccion('menu')">Volver al Menú</button>
@@ -732,7 +747,7 @@
   <button onclick="mostrarSubtema('relacion_radianes_grados')">6.b Relación entre Radianes y Grados</button>
   <button onclick="mostrarSeccion('menu')">Volver al Menú</button>
 </div>
- 
+
 <!-- Medida en Radianes -->
 <div id="medida_radianes" class="content-section">
   <h2>6.a Medida en Radianes</h2>
@@ -1179,7 +1194,7 @@
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
       allowfullscreen></iframe>
     <iframe src="" frameborder="0" allowfullscreen></iframe>
-    <p class="creditos">Créditos: [DanielCarreón]</p>
+    <p class="creditos">Créditos: [ProfeAlex]</p>
   </div>
 
   <button onclick="mostrarSeccion('menu')">Volver al Menú</button>
